--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "php": "^8.1.0",
         "devmarketer/easynav": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "itsgoingd/clockwork": "^5.1",
         "laravel/fortify": "^1.6",
         "laravel/framework": "^10.0",
         "laravel/legacy-factories": "^1.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
         "rap2hpoutre/laravel-log-viewer": "^2.3",
-        "santigarcor/laratrust": "^8.2"
+        "santigarcor/laratrust": "^8.2",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
