--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "instascan": "^1.0.0"
     }
 }
