--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,12 @@
         "laravel/fortify": "^1.6",
         "laravel/framework": "^10.0",
         "laravel/legacy-factories": "^1.0",
+        "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.0",
         "rap2hpoutre/laravel-log-viewer": "^2.3",
-        "santigarcor/laratrust": "^8.2"
+        "santigarcor/laratrust": "^8.2",
+        "yajra/laravel-datatables-oracle": "10.3.1"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^2.0",
